--- a/backend/package.json
+++ b/backend/package.json
@@ -12,34 +12,34 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "openai": "^4.6.0",
-    "retell-sdk": "^4.19.0",
     "axios": "^1.6.7",
-    "md5": "^2.3.0",
-    "nanoid": "^5.0.4",
-    "uuid": "^10.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "marked": "^13.0.3",
+    "md5": "^2.3.0",
+    "morgan": "^1.10.0",
+    "nanoid": "^5.0.4",
+    "openai": "^4.6.0",
     "pdf-parse": "^1.1.1",
+    "retell-sdk": "^4.50.0",
+    "uuid": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.0.0",
+    "@types/md5": "^2.3.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.0.0",
-    "@types/md5": "^2.3.5",
     "@types/pdf-parse": "^1.1.4",
-    "tsx": "^4.6.0",
-    "typescript": "^5.0.0",
-    "eslint": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "tsx": "^4.6.0",
+    "typescript": "^5.0.0"
   }
 }
