--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node -r module-alias/register dist/index.js",
     "test": "jest",
     "lint": "eslint src/**/*.ts"
   },
@@ -19,6 +19,7 @@
     "helmet": "^7.1.0",
     "marked": "^13.0.3",
     "md5": "^2.3.0",
+    "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.4",
     "openai": "^4.6.0",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.0.0",
     "@types/md5": "^2.3.5",
+    "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.0.0",
     "@types/pdf-parse": "^1.1.4",
@@ -41,5 +43,8 @@
     "jest": "^29.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.0.0"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
