--- a/backend/env.example
+++ b/backend/env.example
@@ -11,6 +11,9 @@ RETELL_API_KEY=your_retell_api_key_here
 PORT=3001
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
+# 生产环境示例:
+# NODE_ENV=production
+# FRONTEND_URL=https://userology.xin
 
 # Logging
 LOG_LEVEL=info
