--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,6 +1,10 @@
 # Frontend Configuration
+# 开发环境使用 localhost，生产环境使用实际域名
 NEXT_PUBLIC_API_URL=http://localhost:3001/api
 NEXT_PUBLIC_LIVE_URL=http://localhost:3000
+# 生产环境示例:
+# NEXT_PUBLIC_API_URL=https://userology.xin/api
+# NEXT_PUBLIC_LIVE_URL=https://userology.xin
 
 # Supabase (for client-side auth)
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
