--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,8 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -74,6 +75,7 @@
     "@types/react-dom": "^18",
     "@types/regenerator-runtime": "^0.13.5",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^5.3.9",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^10.0.1",
